Changes to add jdk17, remove jdk 8,14 and upgrade to gradle 7
Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>